--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Hoteles Granada</title>
+    <title></title>
     <meta name="description" content="descripción">
     <meta name="keywords" content="keywords">
     <link rel="stylesheet" href="css/bootstrap.min.css">
