--- a/contacto.html
+++ b/contacto.html
@@ -14,8 +14,10 @@
 <div class="container-fluid p-0">
     <header class="pe-2">
         <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="justify-content-start"><a class="navbar-brand justifycontent-start" href="main.html"><img src="img/logo.png" alt="logo"></a></div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Activar navegacion">
+            <div class="justify-content-start"><a class="navbar-brand justifycontent-start" href="main.html"><img
+                    src="img/logo.png" alt="logo"></a></div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Activar navegacion">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -35,7 +37,8 @@
                     <li class="nav-item">
                         <form id="buscar" class="form-inline" action="/buscar" method="get">
                             <div class="input-group">
-                                <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar" name="query">
+                                <input class="form-control" type="search" placeholder="Buscar" aria-label="Buscar"
+                                       name="query">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                                 </div>
@@ -57,53 +60,54 @@
     <main>
         <form action="/action_page.php" class="p-5">
             <div class="row">
-                <div class="col-4">
-                    <label for="nombre" class="form-label">Nombre:</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="bi bi-person"></i></span>
+                <div class="row">
+                    <div class="col-xs-12 col-md-4">
+                        <label for="nombre" class="form-label">Nombre:</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="bi bi-person"></i></span>
+                            </div>
+                            <input type="text" id="nombre" class="form-control" name="nombre">
                         </div>
-                        <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre">
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <label for="telefono" class="form-label">Teléfono:</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="bi bi-telephone"></i></span>
+                            </div>
+                            <input type="tel" id="telefono" class="form-control" name="telefono">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4">
+                        <label for="email" class="form-label">Email:</label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                            </div>
+                            <input type="email" id="email" class="form-control" name="email">
+                        </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <label for="telefono" class="form-label">Teléfono:</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="bi bi-telephone"></i></span>
-                        </div>
-                        <input type="tel" class="form-control" id="telefono"
-                               pattern="[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{2}" placeholder="555-71-42-17" name="telefono">
-                    </div>
+                <div class="col-12 mt-2">
+                    <label for="asunto" class="form-label">Asunto:</label>
+                    <input type="text" class="form-control" id="asunto" placeholder="Asunto" name="asunto">
                 </div>
-                <div class="col-4">
-                    <label for="email" class="form-label">Email:</label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="bi bi-envelope"></i></span>
-                        </div>
-                        <input type="email" class="form-control" id="email" placeholder="ejemplo@dominio.com"
-                               name="email">
-                    </div>
+                <div class="col-12 mt-2">
+                    <label for="mensaje" class="form-label">Mensaje:</label>
+                    <textarea class="form-control" rows="5" id="mensaje" name="mensaje"></textarea>
                 </div>
-            </div>
-            <div class="col-12 mt-2">
-                <label for="asunto" class="form-label">Asunto:</label>
-                <input type="text" class="form-control" id="asunto" placeholder="Asunto" name="asunto">
-            </div>
-            <div class="col-12 mt-2">
-                <label for="mensaje" class="form-label">Mensaje:</label>
-                <textarea class="form-control" rows="5" id="mensaje" name="mensaje"></textarea>
-            </div>
-            <div class="mt-2 d-flex justify-content-center">
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <div class="mt-2 d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
             </div>
         </form>
 
     </main>
 
     <footer class="text-center">
-        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@dominio.com</a></span></p>
+        <p><span class="d-none d-lg-inline">Teléfono: <a href="tel:123456789">123-456-789</a> |</span> <span
+                class="d-none d-md-inline">Correo: <a href="mailto:info@dominio.com">info@dominio.com</a></span></p>
         <p class="d-none d-lg-block">Dirección</p>
         <p>&copy2024 Dominio. Todos los derechos reservados.</p>
     </footer>
