Menú desplegable, cambios en formularios

--- a/lugares.html
+++ b/lugares.html
@@ -24,10 +24,26 @@
             <a class="nav-link" href="main.html" target="_blank">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="lugares.html" target="_blank">Lugares</a>
+            <a class="nav-link" href="reservas.html" target="_blank">Reservas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="galeria.html" target="_blank">Galeria</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Japón
+            </a>
+            <ul class="dropdown-menu desplegable">
+              <li><a class="dropdown-item" href="lugares.html">Lugares</a></li>
+              <li><a class="dropdown-item" href="que-ver.html">¿Qué ver?</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="tienda.html" target="_blank">Tienda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html" target="_blank">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contacto.html" target="_blank">Contacto</a>
