--- a/tienda.html
+++ b/tienda.html
@@ -148,7 +148,7 @@
                         <img class="card-img-top" src="img/amigurumi7.jpg" alt="Harley Quinn">
                         <div class="card-body">
                             <h5 class="card-title">Harley Quinn</h5>
-                            <p class="card-text precio">Texto</p>
+                            <p class="card-text precio">20,90 &euro;</p>
                             <button type="button" class="btn btn-success">Comprar</button>
                         </div>
                     </div>
