--- a/blog.html
+++ b/blog.html
@@ -22,16 +22,16 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item header active">
                         <a class="nav-link" href="main.html" target="_blank">Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item header">
                         <a class="nav-link" href="reservas.html" target="_blank">Reservas</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item header">
                         <a class="nav-link" href="galeria.html" target="_blank">Galeria</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown header">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false">
                             Japón
@@ -42,13 +42,13 @@
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item header">
                         <a class="nav-link" href="tienda.html" target="_blank">Tienda</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item header">
                         <a class="nav-link" href="blog.html" target="_blank">Blog</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item header">
                         <a class="nav-link" href="contacto.html" target="_blank">Contacto</a>
                     </li>
                     <li class="nav-item">
@@ -75,24 +75,25 @@
     </header>
 
     <main>
-
+        <div class="tab-style">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item tab-item" role="presentation">
-                <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#ult-tab-pane"
+            <li class="nav-item tabs" role="presentation">
+                <button class="nav-link tabs active" id="home-tab" data-bs-toggle="tab" data-bs-target="#ult-tab-pane"
                         type="button" role="tab" aria-controls="ult-tab-pane" aria-selected="true">Últimas
                 </button>
             </li>
-            <li class="nav-item tab-item" role="presentation">
-                <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#pag2-tab-pane"
+            <li class="nav-item tabs" role="presentation">
+                <button class="nav-link tabs" id="profile-tab" data-bs-toggle="tab" data-bs-target="#pag2-tab-pane"
                         type="button" role="tab" aria-controls="pag2-tab-pane" aria-selected="false">Página 2
                 </button>
             </li>
-            <li class="nav-item tab-item" role="presentation">
-                <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#pag3-tab-pane"
+            <li class="nav-item tabs" role="presentation">
+                <button class="nav-link tabs" id="contact-tab" data-bs-toggle="tab" data-bs-target="#pag3-tab-pane"
                         type="button" role="tab" aria-controls="pag3-tab-pane" aria-selected="false">Página 3
                 </button>
             </li>
         </ul>
+        </div>
         <div class="row">
             <div class="col12 col-md-9">
                 <div class="tab-content" id="contenido-tabs">
