--- a/lugares.html
+++ b/lugares.html
@@ -80,15 +80,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares1.jpg" class="card-img-top" alt="Imagen de ejemplo">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Yakushima</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Yakushima</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
@@ -101,15 +101,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares2.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Okinawa</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Okinawa</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
@@ -121,15 +121,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Tokio</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Tokio</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
@@ -147,15 +147,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares4.jpg" class="card-img-top" alt="Imagen de ejemplo">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Izu</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Izu</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
@@ -168,15 +168,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares5.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Santuario Itsukushima</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Santuario Itsukushima</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
@@ -188,15 +188,15 @@
             <div class="tarjeta-contenido">
               <div class="tarjeta-frontal">
                 <img src="img/lugares6.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Título de la Tarjeta 1</h5>
-                  <p class="card-text">Contenido visible en la parte frontal.</p>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Alpes japoneses</h5>
+                  <p class="card-text">Haz click para saber más</p>
                 </div>
               </div>
               <div class="tarjeta-posterior">
                 <div class="card-body">
-                  <h5 class="card-title">Contenido Alternativo</h5>
-                  <p class="card-text">Este es el contenido que se muestra cuando la tarjeta se gira.</p>
+                  <h5 class="card-title text-center">Alpes japoneses</h5>
+                  <p class="card-text text-center">Haz click para volver</p>
                 </div>
               </div>
             </div>
